# 20252R0136COSE36203

./: .env.example  .gitignore  FINAL_REPORT.md  IMPROVEMENT_GUIDE.md  MODEL_COMPARISON.md  README.md  TRAINING_REPORT.md  TRAINING_REPORT_lightgbm.md  main.py  pyproject.toml  requirements.txt
docs/: IMPROVEMENT_RESULTS.md  MODEL_COMPARISON.md  PROGRESS_REPORT.md
docs/colab/: COLAB_CHANGES.md  COLAB_SETUP.md  maple_meso_colab.ipynb
models/: feature_importance.json  label_encoders.joblib  metrics.json  scaler.joblib
models/archive/: feature_importance_ensemble.json  feature_importance_lightgbm.json  label_encoders.joblib  metrics_ensemble.json  metrics_lightgbm.json  price_prediction_model_lightgbm.joblib  scaler.joblib
models/improved/: feature_importance.json  label_encoders.joblib  metrics.json  model.joblib  scaler.joblib
src/: compare_models.py  config.py  db_connection.py  download_data.py  ensemble.py  explore_data.py  export_raw_data.py  generate_report.py  improve_model.py  pipeline.py  predict.py  preprocess.py  train.py  train_improved.py  tune_hyperparameters.py
